--- a/Starter_Code/dashboard.ipynb
+++ b/Starter_Code/dashboard.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,12 +24,14 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from pathlib import Path\n",
-    "from dotenv import load_dotenv"
+    "from dotenv import load_dotenv\n",
+    "from panel.interact import interact \n",
+    "from panel import widgets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,16 +50,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighborhood</th>\n",
+       "      <th>sale_price_sqr_foot</th>\n",
+       "      <th>housing_units</th>\n",
+       "      <th>gross_rent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>Alamo Square</td>\n",
+       "      <td>291.182945</td>\n",
+       "      <td>372560</td>\n",
+       "      <td>1239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>Anza Vista</td>\n",
+       "      <td>267.932583</td>\n",
+       "      <td>372560</td>\n",
+       "      <td>1239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>Bayview</td>\n",
+       "      <td>170.098665</td>\n",
+       "      <td>372560</td>\n",
+       "      <td>1239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>Buena Vista Park</td>\n",
+       "      <td>347.394919</td>\n",
+       "      <td>372560</td>\n",
+       "      <td>1239</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010</th>\n",
+       "      <td>Central Richmond</td>\n",
+       "      <td>319.027623</td>\n",
+       "      <td>372560</td>\n",
+       "      <td>1239</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          neighborhood  sale_price_sqr_foot  housing_units  gross_rent\n",
+       "year                                                                  \n",
+       "2010      Alamo Square           291.182945         372560        1239\n",
+       "2010        Anza Vista           267.932583         372560        1239\n",
+       "2010           Bayview           170.098665         372560        1239\n",
+       "2010  Buena Vista Park           347.394919         372560        1239\n",
+       "2010  Central Richmond           319.027623         372560        1239"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Import the necessary CSVs to Pandas DataFrames\n",
+    "import hvplot.pandas\n",
     "file_path = Path(\"Data/sfo_neighborhoods_census_data.csv\")\n",
-    "sf_data = pd.read_csv(file_path, index_col=\"year\")\n",
-    "\n",
-    "file_path = Path(\"Data/neighborhoods_coordinates.csv\")\n",
-    "df_neighborhood_locations = pd.read_csv(file_path)"
+    "sfo_data = pd.read_csv(file_path, index_col=\"year\")\n",
+    "sfo_data.head()"
    ]
   },
   {
@@ -101,145 +191,78 @@
    "source": [
     "# Define Panel Visualization Functions\n",
     "def housing_units_per_year():\n",
-    "    \"\"\"Housing Units Per Year.\"\"\"\n",
+    "   \n",
     "    \n",
-    " \n",
-    "    housing_units = sf_data[\"housing_units\"]\n",
-    "    housing_units = housing_units.groupby([sf_data.index]).mean()\n",
-    "    \n",
-    "    housing_units_fig = plt.figure()\n",
-    "    housing_units_plot = housing_units.plot.bar(x='year', ylim=[370000, 385000], title=\"Average Number of Housing Units Sold per Year\")\n",
-    "    plt.close(housing_units_fig)\n",
-    "    \n",
-    "    return pn.pane.Matplotlib(housing_units_fig)\n",
+    "housing_units= sfo_data .groupby('year').mean()\n",
+    "housing_units_mean = housing_units.drop(['sale_price_sqr_foot', 'gross_rent'],axis=1)\n",
     "\n",
+    "housing_units_fig = plt.figure()\n",
+    "housing_units_plot = housing_units_mean.hvplot.bar(height=200,width=500, yformatter='%.0f',rot=9\n",
+    "\n",
+    "plt.close(housing_units_fig)\n",
+    "\n",
+    "return pn.panel(housing_units_fig)\n",
     "\n",
     "def average_gross_rent():\n",
     "    \"\"\"Average Gross Rent in San Francisco Per Year.\"\"\"\n",
     "    \n",
-    "    average_rent_sqr_foot = sf_data[\"gross_rent\"].groupby([sf_data.index]).mean()\n",
-    "    \n",
-    "    gross_rent_fig = plt.figure()\n",
-    "    average_rent_plot = (average_rent_sqr_foot.plot.line(x='year', y='gross_rent', title=\"Average Goss Rent per Year\"))\n",
-    "    plt.close(gross_rent_fig)\n",
-    "    \n",
-    "    return pn.pane.Matplotlib(gross_rent_fig)\n",
+    "\n",
+    "\n",
+    "average_gross_rent = sfo_data[\"gross_rent\"].groupby([sfo_data.index]).mean()\n",
+    "average_gross_rent\n",
     "\n",
     "\n",
     "\n",
     "def average_sales_price():\n",
     "    \"\"\"Average Sales Price Per Year.\"\"\"\n",
     "    \n",
-    "    average_price_sqr_foot = sf_data[\"sale_price_sqr_foot\"].groupby([sf_data.index]).mean()\n",
-    "    sales_price_fig = plt.figure()\n",
-    "    average_price_plot = (average_price_sqr_foot.plot.line(x='year', y='sale_price_sqr_foot', title=\"Average Sales Price per Year\"))\n",
-    "    plt.close(sales_price_fig)\n",
-    "    \n",
-    "    return pn.pane.Matplotlib(sales_price_fig)\n",
+    "average_rent_sqr_foot = sfo_data[\"sale_price_sqr_foot\"].groupby([sfo_data.index]).mean()\n",
+    "average_rent_sqr_foot\n",
     "\n",
     "\n",
     "\n",
     "def average_price_by_neighborhood():\n",
     "    \"\"\"Average Prices by Neighborhood.\"\"\"\n",
     "    \n",
-    "     sf_data_new = sf_data.groupby([sf_data.index, \"neighborhood\"]).mean()\n",
-    "    sfo_sales = sf_data_new[\"sale_price_sqr_foot\"]\n",
-    "    sfo_sales_df = pd.DataFrame(sfo_sales).reset_index()\n",
-    "     \n",
-    "    \n",
-    "    return sfo_sales_df.loc[sfo_sales_df['neighborhood']==neighborhood,:].hvplot.line(\n",
-    "        x=\"year\",\n",
-    "        y=\"sale_price_sqr_foot\",\n",
-    "        colormap=\"coolwarm\",\n",
-    "        title=\"SF Sale per Square foot per Year\",\n",
-    "    )\n",
+    "sf_data_df = sfo_data.groupby([sfo_data.index, \"neighborhood\"]).mean()\n",
     "\n",
-    "sf_data_new = sf_data.groupby([sf_data.index, \"neighborhood\"]).mean()\n",
-    "sfo_sales = sf_data_new[\"sale_price_sqr_foot\"]\n",
-    "sfo_sales_df = pd.DataFrame(sfo_sales).reset_index()\n",
-    "neighborhood_choice = sfo_sales_df[\"neighborhood\"].unique()\n",
-    "interact(average_price_by_neighborhood, neighborhood=neighborhood_choice)\n",
+    "sf_data_df\n",
+    "\n",
+    "sf_data_sales_df = pd.DataFrame(sf_data_df).reset_index()\n",
     "\n",
     "\n",
     "\n",
     "def top_most_expensive_neighborhoods():\n",
     "    \"\"\"Top 10 Most Expensive Neighborhoods.\"\"\"\n",
-    "    \n",
-    "avg_value_per_neighborhood = sf_data.groupby([sf_data[\"neighborhood\"]]).mean()\n",
-    "    avg_value_per_neighborhood = avg_value_per_neighborhood.reset_index()\n",
-    "    top_10_most_expensive = avg_value_per_neighborhood.nlargest(10, 'sale_price_sqr_foot').reset_index()\n",
-    "    top10_plot = px.bar(top_10_most_expensive,\n",
-    "    x=\"neighborhood\", \n",
-    "    y=\"sale_price_sqr_foot\", \n",
-    "    title=\"Top 10 Most Expensive Neighborhoods in San Francisco\", \n",
-    "    )\n",
     "\n",
-    "    return top10_plot\n",
+    "sf_data_sales_df.head(10)\n",
     "\n",
     "\n",
     "def most_expensive_neighborhoods_rent_sales():\n",
     "    \"\"\"Comparison of Rent and Sales Prices of Most Expensive Neighborhoods.\"\"\"   \n",
     "    \n",
-    "  avg_value_per_neighborhood = sf_data.groupby([sf_data[\"neighborhood\"]]).mean()\n",
-    "    avg_value_per_neighborhood = avg_value_per_neighborhood.reset_index()\n",
-    "    top_10_most_expensive = avg_value_per_neighborhood.nlargest(10, 'sale_price_sqr_foot').reset_index()\n",
-    "    top10_plot = px.bar(top_10_most_expensive,\n",
-    "    x=\"neighborhood\", \n",
-    "    y=\"sale_price_sqr_foot\", \n",
-    "    title=\"Top 10 Most Expensive Neighborhoods in San Francisco\", \n",
-    "    )\n",
+    "sf_data_top_10.head(10).hvplot.bar(x = 'neighborhood',y ='sale_price_sqr_foot', height=400,width=700,label='Top 10 Neighborhoods',yformatter='%.0f',  rot=90)\n",
     "\n",
-    "    return top10_plot\n",
-    "\n",
+    "    \n",
+    "    \n",
     "def parallel_coordinates():\n",
     "    \"\"\"Parallel Coordinates Plot.\"\"\"\n",
-    "    \n",
-    "   avg_value_per_neighborhood = sf_data.groupby([sf_data[\"neighborhood\"]]).mean()    \n",
-    "    top_10_most_expensive = avg_value_per_neighborhood.nlargest(10, 'sale_price_sqr_foot').reset_index()\n",
-    "    top_10_parallel = px.parallel_coordinates(\n",
-    "    top_10_most_expensive, \n",
-    "    color='sale_price_sqr_foot')\n",
     "\n",
-    "    return top_10_parallel\n",
+    "    # YOUR CODE HERE!\n",
+    "\n",
+    "\n",
     "\n",
     "def parallel_categories():\n",
     "    \"\"\"Parallel Categories Plot.\"\"\"\n",
     "    \n",
-    "    avg_value_per_neighborhood = sf_data.groupby([sf_data[\"neighborhood\"]]).mean()  \n",
-    "    top_10_ex_neighborhood = avg_value_per_neighborhood.nlargest(10, 'sale_price_sqr_foot').reset_index()\n",
-    "    top_10_parallel_categories = px.parallel_categories(\n",
-    "    top_10_ex_neighborhood,\n",
-    "    dimensions=[\"neighborhood\", \"sale_price_sqr_foot\", \"housing_units\", \"gross_rent\"],\n",
-    "    color=\"sale_price_sqr_foot\",\n",
-    "    color_continuous_scale=px.colors.sequential.Inferno,\n",
-    ")\n",
+    "    # YOUR CODE HERE!\n",
     "\n",
-    "    return top_10_parallel_categories\n",
     "\n",
     "\n",
     "def neighborhood_map():\n",
     "    \"\"\"Neighborhood Map.\"\"\"\n",
     "\n",
-    " file_path = Path(\"Data/neighborhoods_coordinates.csv\")\n",
-    "    df_neighborhood_location = pd.read_csv(file_path)\n",
-    "    avg_value_per_neighborhood = sf_data.groupby([sf_data[\"neighborhood\"]]).mean()  \n",
-    "    avg_value_per_neighborhood = avg_value_per_neighborhood.reset_index()\n",
-    "    avg_value_location = pd.concat([avg_value_per_neighborhood, df_neighborhood_location], axis=\"columns\", join=\"inner\")\n",
-    "\n",
-    "    location_map = px.scatter_mapbox(\n",
-    "    avg_value_location,\n",
-    "    lat=\"Lat\",\n",
-    "    lon=\"Lon\",\n",
-    "    size=\"sale_price_sqr_foot\",\n",
-    "    color=\"gross_rent\",\n",
-    "    color_continuous_scale=px.colors.cyclical.IceFire,\n",
-    "    #title=\"Average Sale Price per Square Foot and Gross Rent in San Francisco\",\n",
-    "    zoom=11,\n",
-    "    width=800,\n",
-    ")\n",
-    "    \n",
-    "\n",
-    "    return location_map\n",
+    "    # YOUR CODE HERE!\n",
     "\n",
     "\n",
     "def sunburst():\n",
